refactor: refactored total cost on dashboard